--- a/nginx.conf
+++ b/nginx.conf
@@ -99,7 +99,7 @@ http {
     #    }
     #}
 
-
+	# 进入nginx文件夹 start nginx 开启nginx服务 , nginx -s stop关闭nginx
     # HTTPS server
     #
     #server {
